--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "dotenv": "^16.4.7",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
